# PID

./: .gitignore  CMakeLists.txt  MAX31855.cpp  MAX31855.h  PID.vcxproj  PID.vcxproj.filters  README.md  analysis.h  main.cpp  pid.c  pid.cpp  pid.h  thermistor.cpp  thermistor.h
Arduino/: MAX31855.c  MAX31855.cpp  MAX31855.h  main.cpp  pid.cpp  pid.h  thermistor.cpp  thermistor.h
PID/: PID.vcxproj  PID.vcxproj.filters  analysis.cpp  main.cpp  pid.cpp  pid.h
PID/test/: PID.sln  PID.vcxproj  PID.vcxproj.filters  analysis.cpp  analysis.h
PID_mac/: PID_mac.mdproj
pid/: CMakeLists.txt  pid.h
src/Arduino/: MAX31855.cpp  main.cpp  pid.cpp  pid.h  thermistor.cpp  thermistor.h
src/driver/: analysis.cpp  analysis.h  main.cpp
src/pid/: pid.cpp  pid.h
src/testing/: analysis.h  main.cpp
testing/: analysis.cpp  main.cpp
